--- a/twitterdemo/src/main/resources/templates/login.html
+++ b/twitterdemo/src/main/resources/templates/login.html
@@ -18,10 +18,10 @@
         <div align="center" th:if="${param.error}">
             <h4 style="color: red">Login unsuccessful.</h4>
         </div>
-        <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">Log in</button>
+        <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">Log in</button>
     </form>
     <form th:action="@{/signup}" method="get">
-        <button class="btn btn-md btn-success btn-block" name="Submit" value="Login" type="Submit">sighup</button>
+        <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">signup</button>
     </form>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
