--- a/twitterdemo/src/main/resources/templates/login.html
+++ b/twitterdemo/src/main/resources/templates/login.html
@@ -21,7 +21,7 @@
         <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">Log in</button>
     </form>
     <form th:action="@{/signup}" method="get">
-        <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">signup</button>
+        <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">Signup</button>
     </form>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
