--- a/twitterdemo/src/main/resources/templates/feed.html
+++ b/twitterdemo/src/main/resources/templates/feed.html
@@ -19,9 +19,9 @@
             <a href="/tweets?filter=following">Following</a></li>
     </ul><br/>
     <h2>Tweets</h2>
-    <div th:each="tweet:${tweetList}">
-        <h5>@<span th:text="${tweet.user.username}"></span>
-            <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+    <div th:each="tweet:${tweetList}" style="border: 1px solid #ADD8E6; margin: 4px; background-color: #ADD8E6">
+        <h5>@<a th:href="@{/users/} + ${tweet.user.username}"><span th:text="${tweet.user.username}"></span></a>
+            <small><span th:text="${tweet.date}"></span></small></h5>
         <p th:utext="${tweet.message}"></p>
     </div>
 </div>
