--- a/twitterdemo/src/main/resources/templates/login.html
+++ b/twitterdemo/src/main/resources/templates/login.html
@@ -20,6 +20,7 @@
         </div>
         <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">Log in</button>
     </form>
+    <h5 align="center" style="color: blue">Don't have an account? Signup below!</h5>
     <form th:action="@{/signup}" method="get">
         <button class="btn btn-md btn-primary btn-block" name="Submit" value="Login" type="Submit">Signup</button>
     </form>
