--- a/twitterdemo/src/main/resources/templates/registration.html
+++ b/twitterdemo/src/main/resources/templates/registration.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div th:replace="fragments/navbar"></div>
     <h2>Sign up</h2>
-    <form th:action="@{/signup}" th:object="${user}" method="post" autocomplete="off">
+    <form th:action="@{/signup}" th:object="${user}" method="post" autocomplete="off" th:if="${success == null}">
         <div class="form-group">
             <label th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"
                    class="validation-message"></label>
@@ -40,8 +40,13 @@
                     th:text="Submit"></button>
         </div>
     </form>
+    <div th:unless="${success == null}">
+        <h2 th:text="*{success}"></h2>
+        <form th:action="@{/login}" method="get">
+            <button class="btn btn-md btn-primary btn-block" name="Submit" value="Submit" type="Submit" th:text="Login"></button>
+        </form>
+    </div>
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/custom.js"></script>
