--- a/twitterdemo/src/main/resources/templates/user.html
+++ b/twitterdemo/src/main/resources/templates/user.html
@@ -17,8 +17,8 @@
 <div class="list-group" th:each="tweet:${tweetList}">
     <div class="list-group-item list-group-item-action">
         <div class="d-flex w-100 justify-content-between">
-            <h5>@<span th:text="${tweet.user.username}"></span>
-                <small><span th:text="${#dates.format(tweet.createdAt, 'M/d/yy')}"></span></small></h5>
+            <h5><a th:href="@{/users/} + ${tweet.user.username}"><span th:text="${tweet.user.username}"></span></a>
+                <small th:text="${tweet.date}"></small></h5>
         </div>
         <p class="mb-1" th:utext="${tweet.message}"></p>
     </div>
