--- a/twitterdemo/src/main/resources/templates/newTweet.html
+++ b/twitterdemo/src/main/resources/templates/newTweet.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
-<head>
-    <title>Log in</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
-    <link rel="stylesheet" href="/custom.css">
+<head th:replace="fragments/fragments :: head">
 </head>
 <body>
 <div class="container">
-    <div th:replace="fragments/navbar"></div>
+    <div th:replace="fragments/fragments :: navbar"></div>
     <div class="jumbotron col-md-8 col-md-offset-2">
         <h2>New Tweet</h2><br/>
         <form th:action="@{/tweets}" th:object="${tweet}" method="post" autocomplete="off">
@@ -28,8 +21,7 @@
         </div>
     </div>
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script src="/custom.js"></script>
+<div th:replace="fragments/fragments :: scripts">
+</div>
 </body>
 </html>
